--- a/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
+++ b/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="data.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.17" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.18" />
@@ -16,7 +21,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Features\User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
