--- a/KSODotNetCore.ConsoneAppHttpClient/KSODotNetCore.ConsoneAppHttpClient.csproj
+++ b/KSODotNetCore.ConsoneAppHttpClient/KSODotNetCore.ConsoneAppHttpClient.csproj
@@ -15,6 +15,9 @@
     <None Update="data.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Snakes.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
