--- a/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
+++ b/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Content Remove="data.json" />
+    <Content Remove="Features\Snakes\Snakes.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +26,9 @@
 
   <ItemGroup>
     <None Include="data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Snakes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
