--- a/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
+++ b/KSODotNetCore.RestApiWithNLayer/KSODotNetCore.RestApiWithNLayer.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Content Remove="data.json" />
     <Content Remove="Features\Snakes\Snakes.json" />
+    <Content Remove="incompatible-food.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +27,9 @@
 
   <ItemGroup>
     <None Include="data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="incompatible-food.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Snakes.json">
