--- a/KSODotNetCore.PizzaApi/KSODotNetCore.PizzaApi.csproj
+++ b/KSODotNetCore.PizzaApi/KSODotNetCore.PizzaApi.csproj
@@ -18,4 +18,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KSODotNetCore.Shared\KSODotNetCore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
